# EstateReelMaker

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  Rubric.json  crop_icon.py  remove_bg.py  run.sh  styleRecipe.txt  transitions.txt  video_agent_schema.json
backend/: main.py  pyproject.toml
backend/audio_library/: README.md
backend/realstate/: __init__.py  config.py  services.py
backend/realstate/agents/: __init__.py  claude_client.py  image_analyzer.py  openai_client.py  photo_selector.py  prompt_standard.py  prompt_translator.py  shot_matcher.py  vlm_factory.py
backend/realstate/api/: files.py  free_music.py  projects.py  render.py  storyboards.py  styles.py  templates.py  uploads.py  ws.py
backend/realstate/data/: style_catalog.py  style_recipes.py
backend/realstate/effects/: __init__.py  color_grade.py  ken_burns.py  transitions.py
backend/realstate/integrations/: __init__.py  fal_client.py  fal_image.py  free_music.py  nano_banana.py
backend/realstate/models/: __init__.py  shot.py  storyboard.py  style.py  template.py
backend/realstate/pipelines/: __init__.py  multiscale_pipeline.py  reel_pipeline.py
backend/realstate/render/: encoder.py  ffmpeg_builder.py  post_process.py
backend/realstate/schedulers/: pacing.py
backend/realstate/storage/: __init__.py  db.py  filesystem.py
backend/realstate/templates/: cinematic-walkthrough.yaml  golden-hour-reveal.yaml  lifestyle-home.yaml  luxury-estate.yaml  new-listing-drop.yaml  quick-flip.yaml  quick-tour-30.yaml
backend/reelstate/: __init__.py  config.py
backend/reelstate/agents/: __init__.py  image_analyzer.py  openai_client.py  (+2 more)
(+68 files in other folders)
