[project]
name = "realstate"
version = "0.1.0"
description = "AI-powered real estate reel generator"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.8",
    "sqlalchemy>=2.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "pillow>=10.0",
    "httpx>=0.27",
    "anthropic>=0.39",
    "google-genai>=0.3",
]

[project.optional-dependencies]
audio = ["librosa>=0.10"]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["realstate*"]
