[project]
name = "realstate"
version = "0.1.0"
description = "AI-powered real estate reel generator"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.8",
    "sqlalchemy>=2.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "pillow>=10.0",
    "pillow-heif>=0.22",
    "httpx>=0.27",
    "openai>=1.50",
    "fal-client>=0.5",
    "google-genai>=2.0",
    "librosa>=0.10",
    "natsort>=8.4",
    "soundfile>=0.12",
]

[project.optional-dependencies]
audio = []
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["realstate*"]
